# sekoia-automation-models

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/schemas/: DeviceOCSFModel.json  UserOCSFModel.json  VulnerabilityOCSFModel.json
.github/workflows/: ci.yml  publish.yml
sekoia_automation_models/: connector.py
sekoia_automation_models/ocsf/: __init__.py  device.py  software.py  user.py  vulnerability.py
tests/: test_connector.py  test_models.py  test_user_model.py  test_vulnerability_model.py
